# realm-dart

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pubignore  ANNOTATIONS.md  CHANGELOG.md  CHANGELOG.md.orig  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CONTRIBUTING.md  README.md  REALM_API.md  SCHEMA.md  analysis_options.yaml  build.md  build.yaml  dartdoc_options.yaml  flavor_helpers.dart  melos.yaml  pubspec.yaml  pubspec_overrides.yaml  symlinks.sh
.github/: auto_assign.yml  slack.yml  update-samples.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/config/: slack.yml
.github/tmp/: realm-dart-windows.yml  realm-flutter-android.yml  realm-flutter-ios.yml  realm-flutter-windows.yml
.github/workflows/: Issue-Needs-Attention.yml  auto-assign.yml  binary-combine-android.yml  binary-combine-ios.yml  binary-combine-windows.yml  build-native.yml  check-changelog.yml  ci.yml  cleanup-clusters.yml  create-cluster.yml  dart-desktop-tests.yml  delme.yml  deploy-baas.yml  flutter-desktop-tests.yml  pr.yml  prepare-release.yml  publish-release.yml  realm-dart-linux.yml  (+20 more)
annotations/: pubspec.yaml
common/: CHANGELOG.md  README.md  pubspec.yaml  topic.md
ejson/: .gitignore  README.md  build.yaml  melos.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
ffigen/: README.md  bid_conf.h  bid_functions.h  config.yaml  dart_api.h  dart_api_dl.h  dart_native_api.h  entrypoint.h  linux.yaml  macos.yaml  pubspec.yaml  realm_android_platform.h  realm_dart.h  realm_dart_app.h  realm_dart_collections.h  realm_dart_configuration.h  realm_dart_http_transport.h  realm_dart_logger.h  realm_dart_scheduler.h  realm_dart_sync.h  subscription_set.h  sync_client.h  sync_client_config.h  sync_session.h  windows.yaml
flutter/realm_flutter/android/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  dart_api_dl.cc  dart_api_dl.h  dart_api_dl_impl.h  dart_io_extensions.h  realm_flutter.cpp  realm_flutter.h  realm_plugin.cpp
flutter/realm_flutter/android/src/main/cpp/lib/: armeabi-v7a  x86
flutter/realm_flutter/android/src/main/cpp/lib/include/openssl/: ._rsa.h  opensslconf.h
flutter/realm_flutter/android/src/main/cpp/lib/include/realm/util/: config.h
flutter/realm_flutter/windows/: CMakeLists.txt  realm_flutter_plugin.cpp  realm_flutter_plugin.h  realm_flutter_plugin_c_api.cpp  realm_plugin.cpp
flutter/realm_flutter/windows/include/realm/: realm_plugin.h
flutter/realm_flutter/windows/include/realm_flutter/: realm_flutter_plugin.h  realm_flutter_plugin_c_api.h
generator/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  build.yaml  pubspec.yaml  readme.md
lib/: main.dart  main.g.dart  main.gen.dart  realm.dart  realm_flutter.dart  realm_flutter_method_channel.dart  realm_flutter_platform_interface.dart
metrics/: pubspec.yaml
release/: ExtractedChangelog.md
runtime/: README.md  runtime.diff
scripts/: build-android.bat  build-android.sh  build-ios.sh  build-linux.sh  build-macos.sh  build.bat  launch-c.in  launch-c.sh  launch-cxx.in
src/: CMakeLists.txt  event_loop_dispatcher.hpp  realm.build.use.ccache.cmake  realm_dart.cpp  realm_dart.h  realm_dart.hpp  realm_dart_app.h  realm_dart_collections.cpp  realm_dart_collections.h  realm_dart_configuration.cpp  realm_dart_configuration.h  realm_dart_decimal128.cpp  realm_dart_http_transport.cpp  realm_dart_http_transport.h  realm_dart_logger.cpp  realm_dart_logger.h  realm_dart_scheduler.cpp  realm_dart_scheduler.h  realm_dart_scheduler.hpp  realm_dart_sync.cpp  realm_dart_sync.h  subscription_set.cpp  subscription_set.h  sync_client.cpp  sync_client.h  sync_client_config.cpp  sync_client_config.h  sync_session.cpp  sync_session.h
src/android/: CMakeLists.txt  platform.cpp  platform.h
src/dart-dl/: CMakeLists.txt
src/dart-include/lib/windows-x64/: dart.lib
src/ios/: CMakeLists.txt  platform.h  platform.mm
src/object-store-static-lib/: CMakeLists.txt
src/realm-dart-extension/: CMakeLists.txt  CMakeSettings.json  realm_dart_extension.cpp
src/realm-dart-extension/dart/: dart_class.hpp  dart_context.hpp  dart_exception.hpp  dart_function.hpp  dart_init.cpp  dart_init.hpp  dart_object.hpp  dart_protected.hpp  dart_return_value.hpp  dart_string.hpp  dart_types.cpp  dart_types.hpp  dart_value.hpp  platform.cpp
src/realm-dart-extension/realm-js-common/: js_collection.hpp  js_realm.hpp  js_realm_object.hpp  js_types.hpp
src/realm-dart-extension/win/: realm_dart_extension_dllmain_win.cpp
src/vendor-include/realm-ios/: README.md  RealmLibs.md5
src/vendor-include/realm-ios/include/realm/: version_numbers.hpp
src/vendor-include/realm-ios/include/realm/sync/: version.hpp
src/vendor-include/realm-win-x64/doc/realm/: CHANGELOG.md  LICENSE
src/vendor-include/realm-win-x64/include/realm/util/: config.h
src/vendor-include/realm-win-x64/include/win32/: getopt.h
src/vendor-include/realm-win-x64/lib/: object-store-dbg.lib  object-store.lib  realm-dbg.lib  realm-parser-dbg.lib  realm-parser.lib  realm.lib
src/vendor-include/realm-win-x64/lib/cmake/realm/: realm-config-release.cmake  realm-config.cmake  realm-sync-config-release.cmake  realm-sync-config.cmake
test/: README.md  Untitled-1.json  add_or_update_test.dart  add_or_update_test.g.dart  app_credentials_test.dart  app_test.dart  application_configuration_test.dart  application_credentials_test.dart  application_test.dart  asymmetric_test.dart  asymmetric_test.g.dart  baas_client.dart  baas_helper.dart  baas_helper.g.dart  baas_test.dart  backlinks_test.dart  backlinks_test.g.dart  client_reset_test.dart  collections_test.dart  config_test.dart  configuration_test.dart  configuration_test.g.dart  credentials_test.dart  decimal128_test.dart  destructive_schema_test.dart  destructive_schema_test.g.dart  dynamic_realm_test.dart  email_password_provider_test.dart  embedded_test.dart  geospatial_test.dart  geospatial_test.g.dart  indexed_test.dart  indexed_test.g.dart  jwks.json  list_test.dart  manual_test.dart  migration_test.dart  migration_test.g.dart  mongodb_docs_test.dart  mongodb_docs_test.g.dart  (+25 more)
(+775 files in other folders)
